# affordance_gym

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
affordance_gym/: CMakeLists.txt  requirements.txt  setup.py
affordance_gym/notebooks/: kinect_results.py.ipynb  results.ipynb
affordance_gym/scripts/: generate_perception_data.py  generate_trajectories.py  kinect_debug.py  kinect_env.py  kinect_test.py  latent_predictor_eval.py  perception_policy_eval.py  perception_policy_train.py
affordance_gym/src/affordance_gym/: monitor.py  moveit_commander_interface.py  perception_policy.py  remote_interface.py  simulation_interface.py  trajectory_parser.py  utils.py
affordance_gym/src/env_setup/: env_setup.py
affordance_gym/srv/: ChangePose.srv  CurrentPose.srv  JointValues.srv  RobotTrajectory.srv
scripts/: .run.py.swp  feedforward_eval.py  generate_perception_data.py  generate_trajectories.py  kinect_debug.py  kinect_env.py  kinect_results.py.ipynb  kinect_test.py  latent_predictor_eval.py  latent_predictor_train.py  mc_interface.py  perception_policy.py  perception_policy_eval.py  perception_policy_train.py  perception_test.py  results.ipynb  rl_run.py  run.py
src/affordance_gym/: hardware_interface.py  remote_interface.py  rl_env.py  rl_logger.py  simulation_interface.py  utils.py
src/env_setup/: env_setup.py
src/motion_planning/: .controller.py.swp  controller.py  hardware_interface.py  monitor.py  moveit_commander_interface.py  perception_policy.py  policy_gradient.py  remote_interface.py  rl_env.py  rl_logger.py  simulation_interface.py  spawner.py  trajectory_parser.py  utils.py
srv/: JointNames.srv
